@@ -1,3 +1,7 @@
+2009-09-22  6.5.6-4 Cristy  <quetzlzacatenango@image...>
+  * Don't compile Huffman2DEncodeImage() unless the TIFF delegate library
+    is enabled.
+
 2009-09-21  6.5.6-3 Cristy  <quetzlzacatenango@image...>
   * Deprecate LevelImageColors(), replace with LevelColorsImage().
 
